# DDEJ_GOOGLE_ADK

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
ppt_translator/: __init__.py  agent.py  prompts.py
ppt_translator/tools/: __init__.py  _common.py  extractor.py  rebuilder.py
